designing the web site

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-phone-input-material-ui": "^2.18.1",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.10"
   },
